@@ -1405,6 +1405,7 @@ pm-alkali-metals=Alkali metals
 pm-alkaline-earth-metals=Alkaline earth metals
 pm-lathanides=Lathanides
 pm-actinides=Actinides
+pm-science=Science
 
 [technology-name]
 pm-cleaner-power-generation=Cleaner power generation
